--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 ##   Empezar proyecto
 ## docker-compose run app sh -c "django-admin.py startproject app ."
-
+## docker-compose run app sh -c "python manage.py test"
 version: "3"
 
 services:
